<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".PersegiPanjangFragment">
<androidx.constraintlayout.widget.ConstraintLayout
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   >
    <EditText
            android:layout_width="381dp"
            android:layout_height="51dp"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/editTextPanjangPP" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/panjang"/>
    <EditText
            android:layout_width="381dp"
            android:layout_height="51dp"
            android:inputType="numberSigned|number"
            android:ems="10"
            android:id="@+id/editTextLebarPP" android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintTop_toBottomOf="@+id/editTextPanjangPP" android:hint="@string/lebar"/>
    <Button
            android:text="@string/hitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonHitungPP" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextLebarPP" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/luas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLuasPersegi" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonHitungPP" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:text="@string/keliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewKelilingPersegi" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewLuasPersegi" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLuasHasilPP" app:layout_constraintStart_toEndOf="@+id/textViewLuasPersegi"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/textViewLuasPersegi"
            app:layout_constraintBottom_toBottomOf="@+id/textViewLuasPersegi"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" tools:text="...."/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewKelilingHasilPP"
            app:layout_constraintTop_toTopOf="@+id/textViewKelilingPersegi"
            app:layout_constraintBottom_toBottomOf="@+id/textViewKelilingPersegi"
            app:layout_constraintStart_toEndOf="@+id/textViewKelilingPersegi" android:layout_marginStart="8dp"
            tools:text="...."/>
    <Button
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSharePP" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewKelilingPersegi" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>